--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -1214,6 +1214,78 @@ div:hover::-webkit-scrollbar {
     }
 }
 
+#general-info-modal .modal-dialog {
+    width: 70%;
+    max-width: 900px;
+}
+
+#general-info-modal {
+    pointer-events: none;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+}
+
+#general-info-modal .modal-content {
+    border-radius: 0 !important;
+    pointer-events: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    max-height: 100%;
+}
+
+#general-info-modal .modal-header {
+    border-bottom: none;
+}
+
+#general-info-modal .modal-footer {
+    border-top: none;
+    justify-content: normal;
+    color: grey;
+}
+
+.close span {
+    pointer-events: none;
+    font-size: 50pt;
+    font-weight: lighter;
+    font-family: Roboto;
+}
+
+.close-info-popup {
+    line-height: 0.8 !important;
+    padding: 0 10px !important;
+}
+
+.close-info-popup:focus {
+    outline: none;
+}
+
+.fixed-top {
+    pointer-events: none;
+}
+
+.dropdown {
+    pointer-events: auto;
+}
+
+#general-info-modal .modal-body {
+    overflow-y: scroll;
+    height: 500px;
+}
+
+#general-info-modal .modal-body::-webkit-scrollbar {
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+#general-info-modal .modal-body::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+#general-info-modal .modal-body::-webkit-scrollbar-thumb {
+	background-color: #000000;
+	border: 2px solid #555555;
+}
+
 .catchment-filter {
     cursor: pointer;
 }
