--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -26,6 +26,7 @@
         const listCollectorAPIUrl = '{% url "list-collector" %}';
         const centerPointMap = '{{ center_point_map }}';
         const listCategoryAPIUrl = '{% url "list-date-category" %}';
+        const listBoundaryAPIUrl = '{% url "list-boundary" %}';
         const listNonBiodiversityLayerAPIUrl = '{% url "list-non-biodiversity-layer" %}';
         const uploadDataUrl = '{% url "upload-collection" %}';
         const collectionCategory = "{{ collection_category|safe }}";
