--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -55,7 +55,7 @@
                         <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
-                        <li><a class="nav-link" href="{% url 'report' %}">Report</a></li>
+                        <li><a class="nav-link" href="{% url 'report' %}">PDF REPORT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-geonode" href="/layers">GIS CATALOGUE</a></li>
                         <div class="bims-nav-footer row">
                             <div class="col-lg-12">MADE WITH <img src="{% static 'img/kartoza-logo-only.png' %}" height="20px"> BY <a href="http://kartoza.com/">KARTOZA</a></div>
