Update title block

--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -2,8 +2,8 @@
 {% load static from staticfiles %}
 {% load grunt %}
 
-{% block title %}
-    BIMS Map
+{% block subtitle %}
+    Map
 {% endblock %}
 
 {% block head %}
