--- a/bims/templates/csv_uploader.html
+++ b/bims/templates/csv_uploader.html
@@ -57,6 +57,13 @@
                             present(int), absent(int)
                         {% endblock %}
                     </div>
+                    <div class="help-block-space"></div>
+                    <strong>You can download the template here :</strong>
+                    {% block download_example_button %}
+                    <a class="btn btn-success"
+                       href="{% static "data/data_example.csv" %}"
+                       download="data_example.csv">Download</a>
+                    {% endblock %}
                 </div>
                 <div class="help-block-space"></div>
                 <div class="help-block">
