--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -43,6 +43,9 @@
     <div class="map-search-box map-control-panel-box">
         <div class="row">
             <div class="col-lg-12" style="padding-right: 0">
+                <div class="close-button search-reset pull-left">
+                    Reset
+                </div>
                     <span class="title">
                         SEARCH
                     </span>
