--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -413,7 +413,7 @@
 
 <script type="text/template" id="search-result-record-template">
     <div class="result-search" data-search-result-id="" data-taxon-id="<%= taxon_gbif_id %>">
-        <p class="group-title"><%= highlighted_common_name %></p>
+        <p class="group-title"><%= common_name %></p>
         <a class="group-description"><%= count %> occurrences</a>
     </div>
 </script>
