--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -404,7 +404,7 @@
 <script type="text/template" id="search-result-sub-title">
     <div class="search-result-sub-title search-results-total" data-search-result-id="">
         <%= name %>
-        <i class="pull-right"><%= count %> occurrences</i>
+        <i class="pull-right"><span class="total-occurences"><%= count %></span> occurrences</i>
     </div>
 </script>
 
