--- a/bims/templates/map_page/bims.html
+++ b/bims/templates/map_page/bims.html
@@ -39,6 +39,7 @@
         const hideBimsInfoUrl = '{% url "hide-popup-user" %}';
         const bimsInfoContent = {% if flatpage %} true {% else %} false {% endif %};
         const isHealthyrivers = {% if is_healthyrivers %} true {% else %} false {% endif %}
+        const ogcServerDefaultLocation = "{{ OGC_SERVER.default.PUBLIC_LOCATION }}";
     </script>
     {% block extra_head %}
 
