Add custodian field in uploader

--- a/bims/templates/csv_uploader.html
+++ b/bims/templates/csv_uploader.html
@@ -45,7 +45,7 @@
                     And these are optional fields :
                     <div class="help-block-schema">
                         {% block optional_fields %}
-                            present(int), absent(int)
+                            custodian(string), present(int), absent(int)
                         {% endblock %}
                     </div>
                     <div class="help-block-space"></div>
