--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -356,6 +356,13 @@
                         </label>
                         <textarea class="form-control ud-item"
                                   id="ud_notes" placeholder=""></textarea>
+                        <label for="ud_custodian" class="upload-input-label" style="margin-top: 5px;">
+                            Custodian
+                        </label>
+                        <input type="text"
+                               class="form-control mb-2 mr-sm-2 ud-item"
+                               id="ud_custodian" name="Custodian" placeholder="">
+
                         <p class="required-text ">* = Required </p>
 
                         <button type="button" class="btn btn-info upload-data-button">Upload</button>
