--- a/bims/templates/shapefile_uploader.html
+++ b/bims/templates/shapefile_uploader.html
@@ -45,7 +45,7 @@
                     And these are optional properties :
                     <div class="help-block-schema">
                         {% block optional_fields %}
-                            present(int), absent(int)
+                            custodian(string), present(int), absent(int)
                         {% endblock %}
                     </div>
 
