Fix sign up approval required

--- a/bims/templates/account/signup.html
+++ b/bims/templates/account/signup.html
@@ -49,6 +49,7 @@
                         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password" %}</a>
                     </div>
                 </div>
+                <div class="form-space"></div>
             </div> <!-- /container -->
             </div>
         {% endblock %}
