Add notes in login page

--- a/bims/templates/account/login.html
+++ b/bims/templates/account/login.html
@@ -82,7 +82,8 @@
                     {% endif %}
 
                     <div class="login-help">
-                        <a href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a>
+                        <p>This will automatically signs you up if you login with social account for the first time.</p>
+                        If you want to sign up manually you can click here : <a href="{% url 'account_signup' %}">Sign Up</a>
                     </div>
                 </div>
             </div> <!-- /container -->
