--- a/bims/templates/account/verification_sent.html
+++ b/bims/templates/account/verification_sent.html
@@ -29,6 +29,9 @@
                 <div class="custom-form-container" style="padding: 50px;">
                    <h1>{% trans "Verify Your E-mail Address" %}</h1>
                     <p  style="font-size: 15px;">{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+                    <div class="btn-verification">
+                        <a href='/account/login' class="login custom-form-submit btn-login">LOGIN</a>
+                    </div>
                 </div>
             </div> <!-- /container -->
             </div>
