--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -301,9 +301,9 @@
                 </div>
                 <div class="modal-body">
                     <form class="form">
-                        <div class="alert alert-danger" role="alert">
+                        <div class="alert alert-danger upload-alert" role="alert">
                         </div>
-                        <div class="alert alert-success" role="alert">
+                        <div class="alert alert-success upload-alert" role="alert">
                         </div>
                         {% if biological_modules|length > 1 %}
                             <label for="ud_module" class="upload-input-label">
