--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -155,6 +155,10 @@ html, body, .map, .map-wrapper, #map-container {
     padding-top: 60px;
 }
 
+.layer-switcher {
+    z-index: 100;
+}
+
 .map-control-panel, .download-control-panel {
     background-color: white;
     position: absolute;
@@ -171,6 +175,7 @@ html, body, .map, .map-wrapper, #map-container {
     padding-top: 0;
     border-top: none;
     width: 54px;
+    z-index: 100;
 }
 
 .no-upload {
@@ -289,6 +294,7 @@ html, body, .map, .map-wrapper, #map-container {
     border-radius: 0;
     margin-left: 85px;
     margin-top: 60px;
+    z-index: 100;
 }
 
 .map-search-result {
