--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -422,6 +422,18 @@
     </div>
 </script>
 
+<script type="text/template" id="site-detail-sub-title">
+    <div class="search-result-sub-title search-results-total" data-search-result-id="">
+        <%= name %>
+    </div>
+</script>
+<script type="text/template" id="site-detail-registry-values">
+    <div class="result-search" data-search-result-id="">
+        <p class="group-title"><%= name %></p>
+        <a class="group-description"><%= value %></a>
+    </div>
+</script>
+
 <script type="text/template" id="search-result-sub-title">
     <div class="search-result-sub-title search-results-total" data-search-result-id="">
         <%= name %>
