--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -31,12 +31,18 @@ section {
     -o-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    height: 100%;
-    margin-bottom: 50px;
+    min-height: 100%;
+    position: relative;
+}
+
+#fish-data {
+    padding-top: 20px;
+    min-height: 500px;
+    padding-bottom: 150px;
 }
 
 #about {
-    background-color: #aad993;
+    background-color: #333333;
     color: white;
     width: 100%;
     padding: 12px 0;
@@ -49,11 +55,6 @@ section {
 .footer-shrink {
     background-color: rgba(170, 217, 147, 0.5) !important;
     transition: 0.3s;
-}
-
-.section-heading {
-    margin-top: 0;
-    margin-bottom: 20px;
 }
 
 ::-moz-selection {
@@ -131,22 +132,56 @@ header.masthead p {
     position: absolute;
     width: 100%;
     height: 400px;
-    top: 0;
 }
 
 .title-header-buttons {
-    text-align: center;
-    position: absolute;
+    height: 100%;
     width: 100%;
-    bottom: 100px;
+}
+
+.title-header-buttons div {
+    margin: 0 auto;
+    margin-top: 250px;
+    width: 250px;
+    padding: 5px 10px;
+    background-color: white;
+    color: #1b900d;
+    border: 2px solid #1b900d;
+    text-align: left;
+}
+
+#search-on-map {
+    border: none;
+    height: 30px;
+}
+
+#search-on-map:focus {
+    outline: none;
+}
+
+#search-on-map::placeholder {
+    font-size: 10pt;
+    font-style: italic;
+}
+
+.icon {
+    font-size: 20px;
+    font-weight: normal;
+}
+
+.title-header-buttons .btn {
+    margin-top: 20px;
+}
+
+.login-carousel {
+    margin-top: 250px !important;
 }
 
 #carouselIndicators {
     width: 100%;
-    position: absolute;
+    position: relative;
     height: 400px;
     overflow-y: hidden;
-    top: 0;
 }
 
 .carousel-indicators li {
@@ -159,20 +194,41 @@ header.masthead p {
 .chart-icon-wrapper {
     position: relative;
     width: 200px;
-    height: 250px;
+    height: 200px;
     margin: 0 auto;
 }
 
+.fish-icon {
+    width: 110px !important;
+    height: 110px !important;
+    position: absolute;
+    margin-top: 40px;
+    margin-left: -55px;
+}
+
 .bullet {
-    width: 120px;
-    height: 120px;
-    border-radius: 60px;
-    border: 1px solid #436461;
+    width: 130px;
+    height: 130px;
+    border-radius: 75px;
+    border: 1px solid #000;
     position: absolute;
     margin: 0;
-    display: block;
-    left: 38px;
-    top: 80px;
+    display: none;
+    left: 75px;
+    top: 30px;
+
+  -webkit-box-shadow:
+    0 0 0 5px #ffcc00,
+    inset 0 0 0 5px #ffcc00;
+  -moz-box-shadow:
+    0 0 0 5px #ffcc00,
+    inset 0 0 0 5px #ffcc00;
+  -o-box-shadow:
+    0 0 0 5px #ffcc00,
+    inset 0 0 0 5px #ffcc00;
+  box-shadow:
+    0 0 0 5px #ffcc00,
+    inset 0 0 0 5px #ffcc00;
 }
 
 .carousel-item {
@@ -256,15 +312,6 @@ header.masthead p {
 html, body {
     margin: 0;
     width: 100%;
-    height: 100%;
-}
-
-.fish-icon {
-    width: 140px !important;
-    height: 140px !important;
-    position: absolute;
-    margin-top: 22px;
-    margin-left: -71px;
 }
 
 .crab {
@@ -277,8 +324,8 @@ html, body {
 
 .donut-chart {
     position: absolute !important;
-    top: 55px;
-    left: 13px;
+    top: 10px;
+    left: 69px;
 }
 
 .btn-account {
@@ -286,35 +333,45 @@ html, body {
     border-radius: 0;
     margin: 10px;
     font-weight: normal;
-    color: #436461;
+    color: #1b900d;
     padding: 3px 20px;
     font-size: 13pt;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
     transition: all 0.3s ease 0s;
+    border: 2px solid #1b900d;
 }
 
 .btn-account:hover {
     color: white;
-    background-color: #436461;
+    background-color: #1b900d;
+}
+
+.section-heading-container {
+    border-bottom: 1px solid #1b900d;
+    padding-bottom: 0;
+    margin-bottom: 25px;
 }
 
 .section-heading {
-    color: #a02246;
-    font-weight: normal !important;
+    color: #1b900d;
+    font-weight: lighter !important;
     font-size: 1.75em !important;
+    margin-top: 0;
 }
 
 .total-data {
+    padding-top: 60px;
     font-weight: bold;
     font-size: 20px;
-    color: #436461;
+    color: #000;
     margin-bottom: 0;
 }
 
 .total-data-desc {
     font-weight: 100;
-    font-size: 20px;
-    color: #436461;
+    padding-bottom: 70px;
+    font-size: 17px;
+    color: #000;
     margin-bottom: 0;
 }
 
@@ -323,12 +380,18 @@ html, body {
 }
 
 .about-links {
-    border-left: 1px solid white;
+    text-align: right;
+    border-right: 1px solid #ffcc00;
 }
 
 .about-links>p {
-    margin: 3px 0;
+    margin: 8px 0;
     font-size: 11pt;
+    font-weight: lighter;
+}
+
+.about-links a {
+    color: white !important;
 }
 
 .dropdown-toggle {
@@ -352,9 +415,4 @@ html, body {
 
 .carousel-inner, .carousel-item {
     height: 100%;
-}
-
-#header-wrapper {
-    min-height: 100%;
-    height: auto;
 }
