--- a/bims/static/css/landing_page.css
+++ b/bims/static/css/landing_page.css
@@ -369,7 +369,7 @@ html, body {
 
 .total-data-desc {
     font-weight: 100;
-    padding-bottom: 70px;
+    padding-bottom: 65px;
     font-size: 17px;
     color: #000;
     margin-bottom: 0;
@@ -415,4 +415,12 @@ html, body {
 
 .carousel-inner, .carousel-item {
     height: 100%;
+}
+
+.dashboard-data, .dashboard-row {
+    justify-content: center !important;
+}
+
+.dashboard-row {
+    margin-top: 20px;
 }
