Link documents menu to geonode documents page

--- a/bims/templates/main_base.html
+++ b/bims/templates/main_base.html
@@ -54,7 +54,7 @@
                         <li><a class="nav-link js-scroll-trigger" id="navbar-ext-resources" href="{% url 'link_list' %}">LINKS</a></li>
                         <li><a class="nav-link js-scroll-trigger" href="/tracking/">SITE
                             STATISTICS</a></li>
-                        <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/under-development/">DOCUMENTS & REPORTS</a></li>
+                        <li><a class="nav-link js-scroll-trigger" id="navbar-doc-report" href="/documents/">DOCUMENTS & REPORTS</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-contact" href="/contact/">CONTACT</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a></li>
                         <li><a class="nav-link js-scroll-trigger" id="navbar-geonode" href="/layers">GIS CATALOGUE</a></li>
